# nats-asyncio-service-exemplar

./: .env.example  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/reviews/: TASK-R7B3-review-report.md
src/example_service/: __init__.py  __main__.py  app.py  config.py
src/example_service/handlers/: __init__.py  domain.py
src/example_service/schemas/: __init__.py
src/example_service/services/: __init__.py  domain.py
tasks/backlog/: TASK-FASTSTREAM-NATS-995BFEC6.md  TASK-FASTSTREAM-TEST-5343764A.md  TASK-NATS-DOCKER-INT-52F47100.md  TASK-NATS-HANDLER-SE-FFC219CA.md  TASK-PYDANTIC-NATS-S-992B1EA6.md  TASK-PYDANTIC-SETTIN-E7C39D9B.md  TASK-PYTEST-ASYNCIO--1BA81D54.md  TASK-R7B3-review-nats-exemplar.md
tasks/backlog/nats-exemplar-build/: IMPLEMENTATION-GUIDE.md  README.md
tasks/completed/TASK-NEB-001/: TASK-NEB-001.md
tasks/completed/TASK-NEB-002/: TASK-NEB-002.md
tasks/completed/TASK-NEB-004/: TASK-NEB-004.md
tasks/completed/nats-exemplar-build/: TASK-NEB-003-implement-integration-test.md
tests/: conftest.py  test_handler.py  test_integration.py  test_service.py
