[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example-service"
version = "0.1.0"
description = "Example NATS asyncio service — exemplar for template extraction"
requires-python = ">=3.12"
dependencies = [
    "faststream[nats]>=0.5.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: requires real NATS server (run with '-m integration')",
    "seam: cross-module contract tests",
    "integration_contract: tests that verify integration contracts",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.hatch.build.targets.wheel]
packages = ["src/example_service"]
